K8S/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048
  labels:
    env: production
    team: gaming

  annotations:
    owner: reddy
