K8S/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 2048-deployment
  namespace: game-2048
  labels:
    app: nginx-2048

spec:
  #Number of pods that were desired.
  replicas: 3
  #Each version get stored in etcd and these number got stored.
  revisionHistoryLimit: 5

  #Rolling update
  strategy:
    type: RollingUpdate

    rollingUpdate:
      maxUnavailable: 1 #min=desired-maxUnavilable
      maxSurge: 1 #max=desired+maxsurge
  
  selector: #Tells how can u identify the pods
    matchLabels:
      app:  nginx-2048
  
  template: #Labels the pods
    metadata:
      labels:
        app: nginx-2048
        env: production
        version: v1
        managed-by: kubectl
    spec:
      securityContext:
        runAsNonRoot: true #In linux 0 is root user id
        runAsUser: 1000
      
      containers:
        - name: nginx
          image: docker.io/veeramanikanta0376/2048:v1.0
          imagePullPolicy: Always
          volumeMounts: #container access filesystem path
            - name: game-storage
              mountPath: /data

          ports:
          - containerPort: 80

          resources: #Need to autoscale 
            requests:
              memory: "64Mi"
              cpu: "100m"

            limits:
              memory: "125Mi"
              cpu: "250m"
          
          livenessProbe: #Probe fails if the request got error
            httpGet: #http://<pod-ip>:80/
              path: /
              port: 80

            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe: #Probe checks whether the pod ready to receive tyhe traffic
            httpGet:
              path: /
              port: 80
            
            initialDelaySeconds: 5
            periodSeconds: 5

          securityContext: #id internally when process tries toa cquire more than allowed, it saves the day``
            allowPrivilegeEscalation: false
      
      volumes: #defines storage volumes inside the pod
        - name: game-storage #logical volume identifier inside the pod spec later used by volumemounts
          persistentVolumeClaim: #the volume shouid come from a PVC
            claimName: game-2048-pvc #use the storage requested by this pvc object
