K8S/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: game-2048-service
  namespace: game-2048

  labels:
    app: nginx-2048
    env: production
    managed-by: kubectl

spec:
  # Internal cluster communication only
  type: ClusterIP

  # Service identifies target Pods using labels
  selector:
    app: nginx-2048

  ports:
    - name: http

      # Service port exposed inside cluster
      port: 80

      # Pod container porttarget
      targetPort: 80

      # Protocol used
      protocol: TCP
