K8S/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: game-2048-network-policy
  namespace: game-2048

  labels:
    app.kubernetes.io/name: game-2048
    app.kubernetes.io/component: security

spec:
  podSelector:
    matchLabels:
      app: nginx-2048

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx

      ports:
        - protocol: TCP
          port: 80

  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0

      ports:
        - protocol: TCP
          port: 53

        - protocol: UDP
          port: 53

        - protocol: TCP
          port: 443
